--- a/customer/templates/customer/profile-details.htm
+++ b/customer/templates/customer/profile-details.htm
@@ -5,30 +5,30 @@
 {% include 'snippets/customer-header.htm'%}
 {% include 'snippets/page-header.htm' %}
 
-<section class="user-dashboard page-wrapper">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <ul class="list-inline dashboard-menu text-center">
-                    <li><a href="/customer/dashboard/">Dashboard</a></li>
-                    <li><a href="/customer/order/">Orders</a></li>
-                    <li><a class="active" href="/customer/profile-details/">Profile Details</a></li>
-                    <li><a href="/customer/appointment/">Lab Appointments</a></li>
+<section class="user-dashboard page-wrapper noBig">
+    <div class="container noBig">
+        <div class="row noBig">
+            <div class="col-md-12 noBig">
+                <ul class="list-inline dashboard-menu text-center noBig">
+                    <li class="noBig"><a href="/customer/dashboard/">Dashboard</a></li>
+                    <li class="noBig"><a href="/customer/order/">Orders</a></li>
+                    <li class="noBig"><a class="active" href="/customer/profile-details/">Profile Details</a></li>
+                    <li class="noBig"><a href="/customer/appointment/">Lab Appointments</a></li>
                 </ul>
-                <div class="dashboard-wrapper dashboard-user-profile">
-                    <div class="media">
-                        <div class="pull-left text-center" href="#!">
+                <div class="dashboard-wrapper dashboard-user-profile noBig">
+                    <div class="media noBig">
+                        <div class="pull-left text-center noBig" href="#!">
                             <img class="media-object user-img" src="/media/{{customer_img.image}}" alt="Profile image of {{customer.shop_name}}">
                             <!-- <a class="btn btn-main mt-20" data-target="#MyProfileModal" data-toggle="modal">Edit <i class="tf-ion-edit"></i></a> -->
                         </div>
-                        <div class="media-body">
-                            <ul class="user-profile-list">
+                        <div class="media-body noBig">
+                            <ul class="user-profile-list noBig">
                                 <h3 class="font-weight-bold ">Customer Details</h3>
-                                <li><span>Full Name:</span>{{customer.full_name}}</li>
-                                <li><span>Gender:</span>{{customer.gender}}</li>
-                                <li><span>Email:</span>{{customer.email}}</li>
-                                <li><span>Phone:</span>{{customer.contact_number}}</li>
-                                <li><span>Address:</span>{{customer.address}}</li>
+                                <li class="noBig"><span>Full Name:</span>{{customer.full_name}}</li>
+                                <li class="noBig"><span>Gender:</span>{{customer.gender}}</li>
+                                <li class="noBig"><span>Email:</span>{{customer.email}}</li>
+                                <li class="noBig"><span>Phone:</span>{{customer.contact_number}}</li>
+                                <li class="noBig"><span>Address:</span>{{customer.address}}</li>
                             </ul>
                             <hr>
                         </div>
@@ -41,21 +41,21 @@
 {% include 'snippets/copyright-footer.htm'%}
 
 <!-- .modal -->
-<div class="modal fade" id="MyProfileModal">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
+<div class="modal fade noBig" id="MyProfileModal">
+    <div class="modal-dialog noBig">
+        <div class="modal-content noBig">
+            <div class="modal-header noBig">
                 <button type="button" class="close" data-dismiss="modal">×</button> 
                 <h4 class="modal-title">
                     Edit your profile
                 </h4>                                                             
                 <hr>
-                <div class="media dashboard-wrapper">
-                    <div class="text-center" href="#!">
+                <div class="media dashboard-wrapper noBig">
+                    <div class="text-center noBig" href="#!">
                         <img class="media-object user-img" id="profile" src="/media/{{customer_img.image}}"  alt="Profile image of {{customer.shop_name}}">
                         <a href="#x" class="btn btn-transparent mt-20">Change Image</a>
                     </div>
-                <dl class="dl-horizontal details-list">
+                <dl class="dl-horizontal details-list noBig">
                     <dt class="mt-10">Full Name:</dt>
                     <dd><input type="text" class="form-control"  placeholder="hari lal yadhab"></dd>
                     <dt class="mt-10">Pharmacy Name:</dt>
@@ -76,7 +76,7 @@
                     <dd>{{customer.vat_number}}</dd> 
                 </dl>
             </div>                         
-            <div class="modal-footer">
+            <div class="modal-footer noBig">
                 <button class="btn-css btn btn-primary">Update</button>
                 <button type="button" class="btn-css btn btn-default" data-dismiss="modal">Close</button>                               
             </div>
