--- a/medicalapp/templates/medicalapp/contact.htm
+++ b/medicalapp/templates/medicalapp/contact.htm
@@ -5,39 +5,39 @@
 {% include 'snippets/header.htm'%}
 {% include 'snippets/page-header.htm' %}
 
-<section class="page-wrapper">
-	<div class="contact-section">
-		<div class="container">
-			<div class="row">
+<section class="page-wrapper noBig">
+	<div class="contact-section noBig">
+		<div class="container noBig">
+			<div class="row noBig">
 				<!-- Contact Form -->
-				<div class="contact-form col-md-6 " >
+				<div class="contact-form col-md-6 noBig" >
 					<form id="contact-form" method="post" action="" role="form">
 					
-						<div class="form-group">
+						<div class="form-group noBig">
 							<input type="text" placeholder="Your Name" class="form-control" name="name" id="name">
 						</div>
 						
-						<div class="form-group">
+						<div class="form-group noBig">
 							<input type="email" placeholder="Your Email" class="form-control" name="email" id="email">
 						</div>
 						
-						<div class="form-group">
+						<div class="form-group noBig">
 							<input type="text" placeholder="Subject" class="form-control" name="subject" id="subject">
 						</div>
 						
-						<div class="form-group">
+						<div class="form-group noBig">
 							<textarea rows="6" placeholder="Message" class="form-control" name="message" id="message"></textarea>	
 						</div>
 						
-						<div id="mail-success" class="success">
+						<div id="mail-success" class="success noBig">
 							Thank you. The Mailman is on His Way :)
 						</div>
 						
-						<div id="mail-fail" class="error">
+						<div id="mail-fail" class="error noBig">
 							Sorry, don't know what happened. Try later :(
 						</div>
 						
-						<div id="cf-submit">
+						<div id="cf-submit" class="noBig">
 							<input type="submit" id="contact-submit" class="btn btn-transparent" value="Submit">
 						</div>						
 						
@@ -46,36 +46,36 @@
 				<!-- ./End Contact Form -->
 				
 				<!-- Contact Details -->
-				<div class="contact-details col-md-6 " >
-					<div class="google-map">
+				<div class="contact-details col-md-6 noBig" >
+					<div class="google-map noBig">
 						<div id="map"></div>
 					</div>
-					<ul class="contact-short-info" >
-						<li>
-							<i class="tf-ion-ios-home"></i>
+					<ul class="contact-short-info noBig" >
+						<li class="noBig">
+							<i class="tf-ion-ios-home noBig"></i>
 							<span>Ring Road, Balkumari, Lalitpur, Nepal</span>
 						</li>
-						<li>
-							<i class="tf-ion-android-phone-portrait"></i>
+						<li class="noBig">
+							<i class="tf-ion-android-phone-portrait noBig"></i>
 							<span>Phone: +977-9808826654</span>
 						</li>
-						<li>
-							<i class="tf-ion-android-globe"></i>
+						<li class="noBig">
+							<i class="tf-ion-android-globe noBig"></i>
 							<span>Fax: +880-31-000-000</span>
 						</li>
-						<li>
-							<i class="tf-ion-android-mail"></i>
+						<li class="noBig">
+							<i class="tf-ion-android-mail noBig"></i>
 							<span>Email: hello@example.com</span>
 						</li>
 					</ul>
 					<!-- Footer Social Links -->
-					<div class="social-icon">
+					<div class="social-icon noBig">
 						<ul>
-							<li><a class="fb-icon" href="https://www.facebook.com/themefisher"><i class="tf-ion-social-facebook"></i></a></li>
-							<li><a href="https://www.twitter.com/themefisher"><i class="tf-ion-social-twitter"></i></a></li>
-							<li><a href="https://themefisher.com/"><i class="tf-ion-social-dribbble-outline"></i></a></li>
-							<li><a href="https://themefisher.com/"><i class="tf-ion-social-googleplus-outline"></i></a></li>
-							<li><a href="https://themefisher.com/"><i class="tf-ion-social-pinterest-outline"></i></a></li>
+							<li class="noBig"><a class="fb-icon" href="https://www.facebook.com/themefisher"><i class="tf-ion-social-facebook"></i></a></li>
+							<li class="noBig"><a href="https://www.twitter.com/themefisher"><i class="tf-ion-social-twitter"></i></a></li>
+							<li class="noBig"><a href="https://themefisher.com/"><i class="tf-ion-social-dribbble-outline"></i></a></li>
+							<li class="noBig"><a href="https://themefisher.com/"><i class="tf-ion-social-googleplus-outline"></i></a></li>
+							<li class="noBig"><a href="https://themefisher.com/"><i class="tf-ion-social-pinterest-outline"></i></a></li>
 						</ul>
 					</div>
 					<!--/. End Footer Social Links -->
