--- a/templates/snippets/page-header.htm
+++ b/templates/snippets/page-header.htm
@@ -1,11 +1,11 @@
-<section class="page-header">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="content">
+<section class="page-header noBig">
+    <div class="container noBig">
+        <div class="row noBig">
+            <div class="col-md-12 noBig">
+                <div class="content noBig">
                     <h1 class="page-name">{{context.topic}}</h1>
                     <ol class="breadcrumb">
-                        <li><a href="/">{{context.account}}</a></li>
+                        <li class="noBig"><a href="/">{{context.account}}</a></li>
                         <li class="active">{{context.recent_page}}</li>
                     </ol>
                 </div>
