--- a/templates/snippets/prescription.htm
+++ b/templates/snippets/prescription.htm
@@ -1,16 +1,16 @@
 
             
 <!-- .modal -->
-<div class="modal fade" id="MySecondmodal">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
+<div class="modal fade noBig" id="MySecondmodal">
+    <div class="modal-dialog noBig">
+        <div class="modal-content noBig">
+            <div class="modal-header noBig">
                 <button type="button" class="close" data-dismiss="modal">×</button> 
                 <h4 class="modal-title">Upload Prescription</h4>                                                             
                 <hr>
-                <div class="modal-body">
-                    <div class="card-block">
-                        <div class="text-center m-t-20">
+                <div class="modal-body noBig">
+                    <div class="card-block noBig">
+                        <div class="text-center mt-20 noBig">
                             <input type="file" id="fileupload" style="display:none"/> 
                             <button class="btn-css btn btn-primary" id="OpenfileUpload">click to upload</button>
                         </div>
@@ -20,7 +20,7 @@
                         OR
                     </div>
                     <hr>
-                    <form>
+                    <form class="noBig">
                         <label for="subject">Text Prescription</label>
                         <textarea id="subject" name="subject" placeholder="Prescription with Description.." style="height:200px"></textarea>
                     
@@ -33,12 +33,12 @@
             
                     You need to register First.
 
-                    <div class="text-center">
+                    <div class="text-center noBig">
                         <button class="btn-css btn btn-primary">Submit</button>
                     </div> 
                 </div>  
             </div>
-            <div class="modal-footer">
+            <div class="modal-footer noBig">
                 <button type="button" class="btn-css btn btn-default" data-dismiss="modal">Close</button>                               
             </div>
         </div> 
