--- a/customer/templates/customer/dashboard.htm
+++ b/customer/templates/customer/dashboard.htm
@@ -4,34 +4,34 @@
 {% block content %}
 {% include 'snippets/customer-header.htm'%}
 {% include 'snippets/page-header.htm' %}
-<section class="user-dashboard page-wrapper">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <ul class="list-inline dashboard-menu text-center">
-                    <li><a class="active" href="/customer/dashboard/">Dashboard</a></li>
-                    <li><a href="/customer/order/">Orders</a></li>
-                    <li><a href="/customer/profile-details/">Profile Details</a></li>
-                    <li><a href="/customer/appointment/">Lab Appointments</a></li>
+<section class="user-dashboard page-wrapper noBig">
+    <div class="container noBig">
+        <div class="row noBig">
+            <div class="col-md-12 noBig">
+                <ul class="list-inline dashboard-menu text-center noBig">
+                    <li class="noBig"><a class="active" href="/customer/dashboard/">Dashboard</a></li>
+                    <li class="noBig"><a href="/customer/order/">Orders</a></li>
+                    <li class="noBig"><a href="/customer/profile-details/">Profile Details</a></li>
+                    <li class="noBig"><a href="/customer/appointment/">Lab Appointments</a></li>
                 </ul>
-                <div class="dashboard-wrapper user-dashboard">
-                    <div class="media">
-                        <div class="pull-left">
+                <div class="dashboard-wrapper user-dashboard noBig">
+                    <div class="media noBig">
+                        <div class="pull-left noBig">
                             <!-- <img class="media-object user-img" src='/media/'.{{customer_img.image}} alt="Image"> -->
                             <img class="media-object user-img" src="/media/{{customer_img.image}} " alt="Profile image of {{customer.shop_name}}">
                         </div>
-                        <div class="media-body">
+                        <div class="media-body noBig">
                             <h2 class="media-heading">Welcome {{customer.full_name}}</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, iure, est. Sit mollitia est maxime! Eos
                                 cupiditate tempore, tempora omnis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, nihil. </p>
                         </div>
                     </div>
-                    <div class="total-order mt-20">
+                    <div class="total-order mt-20 noBig">
                         <h4>Total Orders</h4>
-                        <div class="table-responsive">
-                            <table class="table">
-                                <thead>
-                                    <tr>
+                        <div class="table-responsive noBig">
+                            <table class="table noBig">
+                                <thead class="noBig">
+                                    <tr class="noBig">
                                         <th>Order ID</th>
                                         <th>Product</th>
                                         <th>Date</th>
@@ -41,21 +41,21 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
+                                    <tr class="noBig">
                                         <td><a href="#!">#252125</a></td>
                                         <td>medicine</td>
                                         <td>Mar 25, 2016</td>
                                         <td>2</td>
                                         <td>$ 99.00</td>
                                     </tr>
-                                    <tr>
+                                    <tr class="noBig">
                                         <td><a href="#!">#252125</a></td>
                                         <td>hygenic</td>
                                         <td>Mar 25, 2016</td>
                                         <td>2</td>
                                         <td>$ 99.00</td>
                                     </tr>
-                                    <tr>
+                                    <tr class="noBig">
                                         <td><a href="#!">#252125</a></td>
                                         <td>device</td>
                                         <td>Mar 25, 2016</td>
