--- a/templates/snippets/doctor-consultation.htm
+++ b/templates/snippets/doctor-consultation.htm
@@ -1,23 +1,23 @@
 {% load static %}
 {% for doctor in doctor_img %}
 <!-- .modal -->
-<div class="modal fade" id="Mydoctormodal">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
+<div class="modal fade noBig" id="Mydoctormodal">
+    <div class="modal-dialog noBig">
+        <div class="modal-content noBig">
+            <div class="modal-header noBig">
                 <button type="button" class="close" data-dismiss="modal">×</button> 
-                <h4 class="modal-title">
+                <h4 class="modal-title ">
                     Book An Appointment
                 </h4>                                                             
                 <hr>
-                <dl class="dl-horizontal" style="margin: 0 94px;">
+                <dl class="dl-horizontal noBig" style="margin: 0 94px;">
                     <dt>Doctor Name:</dt>
                     <dd>{{doctor.doctor.full_name}}</dd>
                 </dl>
-                <div class="modal-body">
-                    <div class="card-block">
-                        <div class="text-center m-t-20">
-                            <div class="form-group">
+                <div class="modal-body noBig">
+                    <div class="card-block noBig">
+                        <div class="text-center noBig m-t-20">
+                            <div class="form-group noBig">
                                 <label for="subject">Choose Date for Appointment</label>
                                 <input class="form-control datepicker" placeholder="enter the date">
                             </div>
@@ -60,14 +60,14 @@
 
                     </script> 
 
-                    <div class="text-center">
-                        <button type="submit" class="btn btn-main text-center" >Add Product</button>
+                    <div class="text-center noBig">
+                        <button type="submit" class="btn btn-main text-center noBig" >Add Product</button>
                     </div>
                         
                     </form>
                 </div>  
             </div>
-            <div class="modal-footer">
+            <div class="modal-footer noBig">
                 <button class="btn-css btn btn-primary">Book Appointment</button>
                 <button type="button" class="btn-css btn btn-default" data-dismiss="modal">Close</button>                               
             </div>
@@ -76,13 +76,13 @@
 </div>  
 
 <!-- doctor -->
-<section class="about section">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-6 col-md-4">
+<section class="about section noBig">
+    <div class="container noBig">
+        <div class="row noBig">
+            <div class="col-xs-6 col-md-4 noBig">
                 <img class="img-responsive mt-50" src="/media/{{doctor.image}}">
             </div>
-            <div class="col-xs-6 col-md-4 mt-10">
+            <div class="col-xs-6 col-md-4 mt-10 noBig">
                 <h3><a href="/customerdoctor-detail/{{doctor.doctor.id}}"> {{doctor.doctor.full_name}}</a></h3>
                 <p class="text-info">{{doctor.doctor.Specialist}}</p>
                 <p>{{doctor.doctor.degree}}</p>
@@ -91,16 +91,16 @@
                 
 
             </div>
-            <div class="col-xs-6 col-md-4 mt-40">
-                <div class="text-center">
+            <div class="col-xs-6 col-md-4 mt-40 noBig">
+                <div class="text-center noBig">
                     <i class="tf-ion-android-calendar icon-max"></i> 
                 </div>
-                <dl class="text-center mt-10">
+                <dl class="text-center noBig mt-10">
                     <dt>Available Date:</dt>
                     <dd>{{doctor.doctor.available_date}}</dd>
                 </dl>
     
-                <dl class="text-center">
+                <dl class="text-center noBig">
                     <dt>NMC No</dt>
                     <dd>{{doctor.doctor.nmc_number}}</dd>
 
