--- a/templates/snippets/vendors.htm
+++ b/templates/snippets/vendors.htm
@@ -4,16 +4,16 @@
 <hr>
 
 {% for vendor in vendor_img %}
-    <section class="about section">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 col-md-4">
+    <section class="about section noBig">
+        <div class="container noBig">
+            <div class="row noBig">
+                <div class="col-xs-12 col-md-4 noBig">
                     <img class="img-responsive mt-50" src="/media/{{vendor.image}}">
                 </div>
-                <div class="col-xs-12 col-md-6 mt-30">
+                <div class="col-xs-12 col-md-6 mt-30 noBig">
                     <h3><a href="/customer/vendor-detail/{{vendor.vendor.id}}"> {{vendor.vendor.shop_name}}</a></h3>
                     <p class="text-info">{{vendor.vendor.description}}</p>
-                    <dl class="dl-horizontal">
+                    <dl class="dl-horizontal noBig">
                         <dt>Name:</dt>
                         <dd>{{vendor.vendor.full_name}}</dd>
                         <dt>Email:</dt>
